Fix:dark mode #1

--- a/styles.css
+++ b/styles.css
@@ -545,7 +545,7 @@ body.dark-mode .word-item,
 body.dark-mode .key {
     background-color: #1f1f1f;
     color: #eee;
-    border: 1px solid #444;
+    border: 4px solid #444;
 }
 
 body.dark-mode .tab-content {
